syntax = "proto3";

package graft;

option go_package = "github.com/eleven-am/graft/internal/proto";

service GraftNode {
  rpc ProcessTrigger(TriggerRequest) returns (TriggerResponse);
  rpc RequestJoin(JoinRequest) returns (JoinResponse);
}

message NodeConfig {
  string name = 1;
  bytes config = 2;
}

message WorkflowTrigger {
  string workflow_id = 1;
  repeated NodeConfig initial_nodes = 2;
  bytes initial_state = 3;
  map<string, string> metadata = 4;
}

message TriggerRequest {
  WorkflowTrigger trigger = 1;
}

message TriggerResponse {
  bool success = 1;
  string message = 2;
}

message JoinRequest {
  string node_id = 1;
  string address = 2;
  int32 port = 3;
  map<string, string> metadata = 4;
}

message JoinResponse {
  bool accepted = 1;
  string node_id = 2;
  string message = 3;
}