syntax = "proto3";

package graft.proto;

option go_package = "github.com/eleven-am/graft/proto/gen";

import "common.proto";
import "google/protobuf/timestamp.proto";

service WorkflowService {
  rpc ProposeStateUpdate(ProposeStateUpdateRequest) returns (ProposeStateUpdateResponse);
  rpc GetWorkflowState(GetWorkflowStateRequest) returns (GetWorkflowStateResponse);
  rpc SubmitTrigger(SubmitTriggerRequest) returns (SubmitTriggerResponse);
}

message ProposeStateUpdateRequest {
  string workflow_id = 1;
  string node_name = 2;
  WorkflowState state = 3;
}

message ProposeStateUpdateResponse {
  Status status = 1;
  int64 log_index = 2;
}

message GetWorkflowStateRequest {
  string workflow_id = 1;
}

message GetWorkflowStateResponse {
  Status status = 1;
  WorkflowState state = 2;
}

message SubmitTriggerRequest {
  string workflow_id = 1;
  string trigger_type = 2;
  bytes payload = 3;
}

message SubmitTriggerResponse {
  Status status = 1;
  string execution_id = 2;
}

message WorkflowState {
  string workflow_id = 1;
  string status = 2;
  map<string, NodeExecution> nodes = 3;
  google.protobuf.Timestamp started_at = 4;
  google.protobuf.Timestamp completed_at = 5;
}

message NodeExecution {
  string id = 1;
  string workflow_id = 2;
  string node_name = 3;
  string status = 4;
  map<string, bytes> config = 5;
  map<string, bytes> results = 6;
  string error = 7;
  google.protobuf.Timestamp started_at = 8;
  google.protobuf.Timestamp completed_at = 9;
  int32 retry_count = 10;
  int32 max_retries = 11;
}